Finished TLS handshake with `TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384`.