@@ -68,6 +68,8 @@
 			-Djson-builder.to-json.indent-output=true
 			-XX:+EnableDynamicAgentLoading
 			-Xshare:off
+			--add-opens java.base/javax.net.ssl=ALL-UNNAMED
+			--add-opens java.base/sun.security.ssl=ALL-UNNAMED
 		</apiphanyArgLine>
 	</properties>
 
@@ -77,7 +79,7 @@
 		<dependency>
 			<groupId>io.github.raduking</groupId>
 			<artifactId>morphix-all</artifactId>
-			<version>1.0.5</version>
+			<version>1.0.6</version>
 		</dependency>
 
 		<!-- Logging -->
